fixed z-index on content nav tree button overlapping item create media modal

--- a/src/apps/content-editor/src/app/components/Nav/components/ContentNavToggle/ContentNavToggle.less
+++ b/src/apps/content-editor/src/app/components/Nav/components/ContentNavToggle/ContentNavToggle.less
@@ -20,7 +20,7 @@
   }
 
   &.ContentNavToggleOpen {
-    z-index: 10;
+    z-index: 1;
     width: 20vw;
 
     @media only screen and (min-width: 2000px) {
